--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {background-color: black;}
   justify-content: center;
   align-items: center;
   height: 95vh;
-  padding 10px; 
+  padding: 10px; 
 }
 
 
@@ -31,7 +31,7 @@ body {background-color: black;}
 	align-self: center;
 }
 
-.button-image{
+.button-image {
 	max-width: 400px;
 	width: 50vw;
 }
